Fix background styling on iOS Safari

--- a/docs/style.css
+++ b/docs/style.css
@@ -13,25 +13,32 @@
   margin-bottom: 15px;
   border-radius: 12px;
   box-shadow: 0 2px 5px var(--box-shadow-color);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 20), 0 2px 4px rgba(0, 0, 0, 30);
 }
 
 button {
   margin-bottom: 0;
 }
 
-body {
-  margin: 0;
-  padding: 0;
+#nekopara-background {
   background-image: url("./assets/nekopara.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: -1;
+}
+
+body {
+  margin: 0;
+  padding: 0;
   color: var(--text-color);
 }
 
 section {
-  padding: 2rem;
+  padding: 1rem;
 }
 
 h1 {
